--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -951,6 +951,110 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Apply to Club
+--------------------------------------------------------------*/
+.apply .email-form {
+  width: 100%;
+  border-top: 3px solid #47b2e4;
+  border-bottom: 3px solid #47b2e4;
+  padding: 30px;
+  background: #fff;
+  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+}
+
+.apply .email-form .form-group {
+  padding-bottom: 8px;
+}
+
+.apply .email-form .validate {
+  display: none;
+  color: red;
+  margin: 0 0 15px 0;
+  font-weight: 400;
+  font-size: 13px;
+}
+
+.apply .email-form .sent-message {
+  /*display: none;*/
+  color: #fff;
+  background: #18d26e;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+}
+
+.apply .email-form .form-group {
+  margin-bottom: 20px;
+}
+
+.apply .email-form .error-message {
+  /*display: none;*/
+  color: #fff;
+  background: #ed3c0d;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+}
+
+.apply .email-form label {
+  padding-bottom: 8px;
+}
+
+.apply .email-form input,
+.apply .email-form textarea {
+  border-radius: 0;
+  box-shadow: none;
+  font-size: 14px;
+  border-radius: 4px;
+}
+
+.apply .email-form input:focus,
+.apply .email-form textarea:focus {
+  border-color: #47b2e4;
+}
+
+.apply .email-form input {
+  height: 44px;
+}
+
+.apply .email-form textarea {
+  padding: 10px 12px;
+}
+
+.apply .email-form button[type=submit] {
+  background: #47b2e4;
+  border: 0;
+  padding: 12px 34px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 50px;
+}
+
+.apply .email-form button[type=submit]:hover {
+  background: #209dd8;
+}
+
+@-webkit-keyframes animate-loading {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes animate-loading {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
 .contact .info {
@@ -1047,19 +1151,6 @@ section {
   font-size: 13px;
 }
 
-.contact .email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .email-form .error-message br+br {
-  margin-top: 25px;
-}
-
 .contact .email-form .sent-message {
   /*display: none;*/
   color: #fff;
@@ -1067,25 +1158,6 @@ section {
   text-align: center;
   padding: 15px;
   font-weight: 600;
-}
-
-.contact .email-form .loading {
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
-
-.contact .email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  -webkit-animation: animate-loading 1s linear infinite;
-  animation: animate-loading 1s linear infinite;
 }
 
 .contact .email-form .form-group {
@@ -1151,6 +1223,73 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Confession
+--------------------------------------------------------------*/
+.cfs .cfs-form {
+  width: 100%;
+  border-top: 3px solid #47b2e4;
+  border-bottom: 3px solid #47b2e4;
+  padding: 30px;
+  background: #fff;
+  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+}
+
+.cfs .cfs-form .form-group {
+  padding-bottom: 8px;
+}
+
+.cfs .cfs-form .validate {
+  display: none;
+  color: red;
+  margin: 0 0 15px 0;
+  font-weight: 400;
+  font-size: 13px;
+}
+
+.cfs .cfs-form .sent-message {
+  /*display: none;*/
+  color: #fff;
+  background: #18d26e;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+}
+
+.cfs .cfs-form label {
+  padding-bottom: 8px;
+}
+
+.cfs .cfs-form input,
+.cfs .cfs-form textarea {
+  border-radius: 0;
+  box-shadow: none;
+  font-size: 14px;
+  border-radius: 4px;
+}
+
+.cfs .cfs-form input:focus,
+.cfs .cfs-form textarea:focus {
+  border-color: #47b2e4;
+}
+
+.cfs .cfs-form textarea {
+  padding: 10px 12px;
+}
+
+.cfs .cfs-form button[type=submit] {
+  background: #47b2e4;
+  border: 0;
+  padding: 12px 34px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 50px;
+}
+
+.cfs .cfs-form button[type=submit]:hover {
+  background: #209dd8;
+}
+
+/*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 #footer {
@@ -1163,11 +1302,11 @@ section {
   background: #f3f5fa;
 }
 
-#footer .footer-top .footer-contact {
+#footer .footer-top .footer-itc {
   margin-bottom: 30px;
 }
 
-#footer .footer-top .footer-contact h3 {
+#footer .footer-top .footer-itc h3 {
   font-size: 28px;
   margin: 0 0 10px 0;
   padding: 2px 0 2px 0;
@@ -1177,11 +1316,10 @@ section {
   color: #37517e;
 }
 
-#footer .footer-top .footer-contact p {
+#footer .footer-top .footer-itc p {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: "Jost", sans-serif;
   color: #5e5e5e;
 }
 
